# demo-todo-app

api/: Dockerfile  app.js  docker-compose.yml  package-lock.json  package.json
api/models/: todo.js
core_sdk/: Cargo.toml
core_sdk/examples/: add.rs  delete.rs  edit.rs  get.rs  list.rs
core_sdk/src/: api.rs  constants.rs  lib.rs  sdk.rs
core_sdk/src/models/: event.rs  mod.rs  todo.rs
core_sdk/src/transport/: mod.rs  websocket.rs
cross-compilation/linux/: Dockerfile
cross-compilation/mac/: Dockerfile
cross-compilation/windows/: Dockerfile
js-core/: Cargo.toml  example.js  index.d.ts  index.js  package.json
js-core/npm/darwin-arm64/: README.md  package.json
js-core/npm/linux-arm64-musl/: README.md  package.json
js-core/npm/linux-x64-musl/: README.md  package.json
js-core/npm/win32-arm64-msvc/: README.md  package.json
js-core/npm/win32-ia32-msvc/: README.md  package.json
js-core/npm/win32-x64-msvc/: README.md  package.json
js-core/src/: lib.rs  model.rs  todo.rs
py/: Cargo.toml  example.py  pyproject.toml
py/src/: callback.rs  lib.rs
py_mix/: .gitignore  Cargo.toml  example.py  pyproject.toml
py_mix/src/: lib.rs  todo.rs
py_mix/todo_app/: __init__.py  sdk.py
