[package]
name = "core_sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq = { version = "2.12.1", features = ["json"] }
log = "0.4.22"
anyhow = "1.0.95"
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
env_logger = "0.11.6"
pyo3 = { version = "0.23.3", optional = true }
napi = { version = "2.12.2", optional = true, default-features = true, features = ["napi4"] }
napi-derive = { version = "2.12.2", optional = true }
tungstenite = { version =  "0.26.1", features = ["rustls-tls-native-roots"] }
url = "2.5.4"

[features]
python = ["pyo3"]
js = ["napi-derive", "napi"]
